name:                confcheck-types
version:             0.1.0.0
synopsis:            Base types for the configuration checking tool.
description:         Please see README.md
homepage:            http://github.com/bartavelle/confcheck-types#readme
license:             AGPL-3.0
license-file:        LICENSE
author:              Simon Marechal
maintainer:          bartavelle@gmail.com
copyright:           Simon Marechal
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  ghc-options:         -Wall -Werror
  ghc-prof-options:    -caf-all -auto-all
  default-extensions:  OverloadedStrings
  hs-source-dirs:      src
  exposed-modules:
    Analyzis.Windows.SID
    Analyzis.Windows.GUID
    Analyzis.Windows.ACE
    Analyzis.Types
    Analyzis.Common
    Analyzis.Fiche
    Data.Condition
    Data.Parsers.Xml
    Data.Parsers.FastText
    Data.Parsers.Atto
    Data.Parsers.Helpers
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , fastparser
                     , text
                     , thyme
                     , bytestring
                     , lens
                     , comonad
                     , containers
                     , unordered-containers
                     , withdependencies
                     , stateWriter
                     , aeson
                     , transformers
                     , cereal
                     , vector
                     , text-printer
                     , data-textual
                     , text-printer
                     , time
                     , network-ip
                     , parsers
                     , elm-bridge >= 0.4
                     , deepseq
                     , hexpat
                     , parsec
                     , mtl
                     , hashable
                     , vector-space
                     , uuid
  default-language:    Haskell2010

executable confcheck-elm
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -rtsopts -Wall
  ghc-prof-options:    -auto-all -caf-all
  build-depends:       confcheck-types, base, elm-bridge ,text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bartavelle/confcheck-types
