name:                confcheck-types
version:             0.2.0
synopsis:            Base types for the configuration checking tool.
description:         Please see README.md
homepage:            http://github.com/bartavelle/confcheck-types#readme
license:             AGPL-3.0
license-file:        LICENSE
author:              Simon Marechal
maintainer:          bartavelle@gmail.com
copyright:           Simon Marechal
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  ghc-options:         -Wall -Werror
  ghc-prof-options:    -fprof-auto -fprof-cafs
  default-extensions:  OverloadedStrings
  hs-source-dirs:      src
  exposed-modules:
    Analysis.Types
    Analysis.Types.ConfigInfo
    Analysis.Types.Cron
    Analysis.Types.File
    Analysis.Types.Helpers
    Analysis.Types.Negatable
    Analysis.Types.Network
    Analysis.Types.Package
    Analysis.Types.Rhost
    Analysis.Types.Sudo
    Analysis.Types.Unix
    Analysis.Types.UnixUsers
    Analysis.Types.Vulnerability
    Analysis.Common
    Analysis.Fiche
    Data.Condition
    Data.Parsers.Xml
    Data.Parsers.FastText
    Data.Parsers.Atto
    Data.Parsers.Helpers
  build-depends:       base >= 4.11 && < 5
                     , attoparsec
                     , text
                     , thyme
                     , bytestring
                     , lens
                     , comonad
                     , containers
                     , unordered-containers
                     , withdependencies >= 0.3.0
                     , stateWriter
                     , aeson
                     , transformers
                     , cereal
                     , vector
                     , text-printer
                     , data-textual
                     , text-printer
                     , time
                     , network-ip
                     , parsers
                     , elm-bridge >= 0.4
                     , deepseq
                     , hexpat
                     , parsec
                     , mtl
                     , hashable
                     , vector-space
                     , uuid
                     , fastparser
  default-language:    Haskell2010

executable confcheck-elm
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -rtsopts -Wall
  ghc-prof-options:    -fprof-auto -fprof-cafs
  build-depends:       confcheck-types, base, elm-bridge ,text
  default-language:    Haskell2010

test-suite xml-tests
  hs-source-dirs:      tests
  main-is:             Xml.hs
  ghc-options:         -Wall -rtsopts -threaded -freduction-depth=150 -j1 -with-rtsopts=-N6
  build-depends:       confcheck-types, base, hspec, bytestring, unordered-containers
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bartavelle/confcheck-types
